# Chess

./: .gitignore  CMakeLists.txt  run_ut.sh  testfile
Application/: CMakeLists.txt  main.cpp
DisplayLib/: CMakeLists.txt  ConsoleDisplay.cpp  iDisplay.hpp
DisplayLib/Tests/: CMakeLists.txt  DisplayMock.hpp  DisplayTest.cpp
LogicLib/: Board.cpp  Board.hpp  CMakeLists.txt  PiecesEnum.hpp
LogicLib/Pieces/: Knight.cpp  Queen.cpp  Queen.hpp
LogicLib/Tests/: CMakeLists.txt  LogicTest.cpp
Tests/: CMakeLists.txt  DisplayMock.cpp  DisplayMock.hpp  DisplayTest.cpp
